--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class-8</title>
+    <title>Class-9</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Md Nazrul Islam Nahid</h1>
 
 
-    <script src="./db.js"></script>
-    <script src="./function.js"></script>
+    <script src="./db.json"></script>
     <script src="./app.js"></script>
 </body>
 </html>
